# test1

./: .pre-commit-config.yaml  README.md  app.py  app2.py  noi.mode.json  package.json  pnpm-lock.yaml  pyproject.toml  test.py  tests.sh  tsconfig.json
.github/workflows/: lint.yml  main.yml  submit.yml
main/: script.py
src/: content.js  style.css
src/contents/: index.js  style.css
