[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors=[]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]  
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["I"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

#d

fix=true
format = "grouped"
ignore-init-module-imports = true
line-length = 120
namespace-packages = ["pkg"]
show-fixes = true
show-source = true
target-version = "py38"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
poethepoet = "^0.20.0"

[tool.ruff.isort]
force-single-line = true

[tool.ruff.pydocstyle]
convention = "google"

[tool.poe.tasks]
# poetry poe test
# poetry poe test module.py
test = "pytest --doctest-modules --doctest-continue-on-failure ${py_file}"

# poetry poe lint
# poetry poe lint -t module.py
[tool.poe.tasks.lint]
cmd  =     "ruff check ${target_dir}"     
args     =     { target_dir = { options = ["--target", "-t"], default = "." }}
