[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors=[]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"    

[tool.ruff]
target-version = "py38"
#line-length = 120
extend-select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "D",
    "UP",
    "YTT",
    "ANN",
    # "S",
    # "BLE",
    #"FBT",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "EM",
    "EXE",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    #"T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "TCH",
    "INT",
    "ARG",
    "PTH",
    "ERA",
    "PD",
    "PGH",
    "PL",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "TRY",
    "NPY",
    "RUF",
]
ignore=[
"RUF001", # String contains ambiguous unicode character
"RUF002", # Docstring contains ambiguous unicode character
"RUF003", # Comment contains ambiguous unicode character
"D205", # 1 blank line required between summary line and description in docstring
"E501", # Line too long
"F401", # imported but unused; consider adding to `__all__` or using a redundant alias
"TID252", # Relative imports from parent modules are banned
"PLR0913", # Too many arguments to function call
"D107", # Missing docstring in `__init__`
"ANN001", # Missing type annotation for function argument
"ANN201", # Missing return type annotation for public function
"ANN202", # Missing return type annotation for private function
"PLR0912", # Too many branches
"PLR0915", # Too many statements
"PLR0911", # Too many return statements
"C901", # Too complex
"PLR2004", # Magic value used in comparison, consider replacing 4 with a constant variable
"E722", # Do not use bare `except`
"PLW2901", # `for` loop variable `{variable name}` overwritten by assignment target
"TRY002", # Create your own exception
"D100",

]

fix=true
ignore-init-module-imports = true
namespace-packages = ["hazm"]
show-fixes = true

[tool.ruff.per-file-ignores]
"data.py"=["ALL"] # temporary
"wiki_extractor.py"=["ALL"] # temporary

[tool.ruff.isort]
force-single-line = true

[tool.ruff.pydocstyle]
convention = "google"